src/test/ui/parser/issues/issue-58856-1.stderr
error: mismatched closing delimiter: `}`
  --> $DIR/issue-58856-1.rs:6:1
   |
LL |     fn b(self>
   |         - unmatched opening delimiter begins here
...
LL | }
   | ^ mismatched closing delimiter

error: expected parameter name, found `>`
  --> $DIR/issue-58856-1.rs:3:14
   |
LL |     fn b(self>
   |              ^ expected parameter name

error: expected one of `)`, `,`, or `:`, found `>`
  --> $DIR/issue-58856-1.rs:3:14
   |
LL |     fn b(self>
   |              ^
   |              |
   |              expected one of `)`, `,`, or `:`
   |              help: missing `,`

error: expected one of `->`, `where`, or `{`, found `}`
  --> $DIR/issue-58856-1.rs:6:1
   |
LL |     fn b(self>
   |        - while parsing this `fn`
...
LL | }
   | ^ expected one of `->`, `where`, or `{`

error: associated function in `impl` without body
  --> $DIR/issue-58856-1.rs:3:5
   |
LL | /     fn b(self>
LL | |
LL | |
LL | | }
   | | ^- help: provide a definition for the function: `{ <body> }`
   | |_|
   | 

error[E0412]: cannot find type `A` in this scope
  --> $DIR/issue-58856-1.rs:1:6
   |
LL | impl A {
   |      ^ not found in this scope

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0412`.
